--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name":"payment_antifraud_app",
+  "name": "payment_antifraud_app",
   "private": "true",
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.9.1",
     "esbuild": "^0.15.12",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
