--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,6 +15,7 @@ AllCops:
     - 'bin/**/*'
     - 'vendor/**/*'
     - 'config/**/*'
+    - 'db/schema.rb'
     - 'script/**/*'
     - 'spec/rails_helper.rb'
 
