--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ AllCops:
   TargetRubyVersion: 3.1
   NewCops: enable
   Exclude:
+    - 'db/schema.rb'
     - 'bin/**/*'
     - 'vendor/**/*'
     - 'config/**/*'
