Ajustes de Problemas do rubocop
Co-authored-by: thaisantero <thais.antero@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,7 @@ AllCops:
     - 'db/schema.rb'
     - 'script/**/*'
     - 'spec/rails_helper.rb'
+    - 'db/migrate/*.rb'
 
 # Trabalhamos bastante com testes como a documentação viva do projeto então
 # desabilitamos a Cop de documentação com comentário
