--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,7 @@ AllCops:
     - 'script/**/*'
     - 'spec/rails_helper.rb'
     - 'db/migrate/*.rb'
+    - 'spec/support/devise_methods.rb'
 
 # Trabalhamos bastante com testes como a documentação viva do projeto então
 # desabilitamos a Cop de documentação com comentário
