Movida action de home#registered_users para users#index e adicionada validação simples no admin
Co-authored-by: petragrunheidt <petragrunheidt@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,8 @@ AllCops:
   TargetRubyVersion: 3.1
   NewCops: enable
   Exclude:
+    - '/spec/*'
+    - 'db/migrate/*'
     - 'db/schema.rb'
     - 'bin/**/*'
     - 'vendor/**/*'
