Removido atributo name do PORO InsuranceCompany e rubocop
Co-authored-by: petragrunheidt <petragrunheidt@gmail.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,5 +37,5 @@ Style/FrozenStringLiteralComment:
 # Escrevemos mais linhas em arquivos de teste do que em arquivos de 
 # código, então é importante poder ter esses arquivos do tamanho necessário
 Metrics/BlockLength:
-  AllowedMethods: ['describe', 'context', 'feature', 'scenario', 'let']
+  AllowedMethods: ['describe', 'context', 'feature', 'scenario', 'let', 'it']
 
