--- a/config/apis.yml
+++ b/config/apis.yml
@@ -1,10 +1,12 @@
 development:
   insurance_api: http://localhost:3000/api/v1 
-  insurance_api_products_endpoint: https://mocki.io/v1/a20c5378-9c7d-4906-b501-dae7afe09f35
+  insurance_api_products_endpoint: http://localhost:3000/api/v1/products 
 
 test:
   insurance_api: http://seguradoras.com/api/v1
   insurance_api_products_endpoint: https://mocki.io/v1/a20c5378-9c7d-4906-b501-dae7afe09f35
+  insurance_api_first_product_endpoint: https://mocki.io/v1/42fd6be9-6747-42b0-91ee-7132bd78e68d
+  insurance_api_second_product_endpoint: https://mocki.io/v1/42fd6be9-6747-42b0-91ee-7132bd78e68d 
 
 production:
   insurance_api: http://seguradoras.com/api/v1
